2007-06-05  Inge Wallin  <inge@lysator.liu.se>

	Krazy: 17: Check for inappropriate pass-by-value function args
	* src/lib/kml/KMLFeature.{h,cpp}: Pass QStrings by const reference

	Krazy:  4: Check for an acceptable copyright
	Krazy: 14: Check for an acceptable license
	* src/lib/kml/KMLObject.{h,cpp}:  Add header w/ copyright and license
	* src/lib/kml/KMLFeature.{h,cpp}: Add header w/ copyright and license
	
	Krazy: 17: Check for inappropriate pass-by-value function args
	* src/lib/kml/KMLFeature.{h,cpp}: Pass QStrings by reference

2007-06-05  Torsten Rahn  <rahn@kde.org>

    * Adding more options for the Qt-Designer plugin
      (later on to be integrated with the Legend in Marble):
        - show relief, ice, rivers, lakes, borders, elevation model
        - quick and dirty rendering
        - updated examples2.ui to reflect those changes 

2007-06-04  Inge Wallin  <ingwa@shihonage.lkpg.cendio.se>

	Krazy: 12. Check for proper include directives
	* src/lib/marble_export.h: Fix include
	* src/plugins/marblewidget/MarbleWidgetPlugin.cpp: Fix include
	* src/plugins/navigator/MarbleNavigatorPlugin.cpp: Fix include

	Clean up 
	* src/lib/vectorcomposer.{h,cpp}: use the m_ convention everywhere.

2007-06-04  Murad Tagirov  <tmurad@gmail.com>
    Updated class diagram
    Added folder for KML objects relates classes
    Added base classes for KML: KMLObject, KMLObject

Murad, this should look like:

	Add initial KML classes
	* src/lib/kml: new subdirectory
	* src/lib/kml/KMLObject.{h,cpp}: new file
	* src/lib/kml/KMLFeature.{h,cpp}: new file
	
2007-06-04  Inge Wallin  <inge@lysator.liu.se>

	Improve apidox
	* src/lib/MarbleModel.h (): Improve apidox
	* src/lib/MarbleWidget.h (): Improve apidox

2007-06-04  Osterfeld

	Remove #ifndef Q_OS_MACX surrounding #include .moc
	* Almost all files: Remove surrounding #nfndef

2007-06-04  Torsten Rahn  <rahn@kde.org>

	* Adding more options for the Qt-Designer plugin
	  (later on to be integrated with the Legend in Marble).
