@@ -5,13 +5,14 @@
 
 <head>
   <title>Marble: Legend</title>
+  <link href="legend.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<H4>Locations</H4>
+<H4><a href="checkbox:locations"><img src="checkbox:locations"></a>&nbsp; Locations</H4>
   <div>
-    <img src="./bitmaps/city_1_yellow.png">
     <img src="./bitmaps/city_1_red.png">
     <img src="./bitmaps/city_1_orange.png">
+    <img src="./bitmaps/city_1_yellow.png">
     <img src="./bitmaps/city_1_white.png">
   </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -25,9 +26,9 @@
     </tr>
   </table>
   <div>
-    <img src="./bitmaps/city_2_yellow.png">
     <img src="./bitmaps/city_2_red.png">
     <img src="./bitmaps/city_2_orange.png">
+    <img src="./bitmaps/city_2_yellow.png">
     <img src="./bitmaps/city_2_white.png">
   </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -36,14 +37,14 @@
         &nbsp;
       </td>
       <td align="left" valign="top"> 
-        100&nbsp;000 - 1&nbsp;000&nbsp;000&nbsp;inh.
+        100&nbsp;000 - <br>1&nbsp;000&nbsp;000&nbsp;inh.
       </td>
     </tr>
   </table>
   <div>
-    <img src="./bitmaps/city_3_yellow.png">
     <img src="./bitmaps/city_3_red.png">
     <img src="./bitmaps/city_3_orange.png">
+    <img src="./bitmaps/city_3_yellow.png">
     <img src="./bitmaps/city_3_white.png">
   </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -52,14 +53,14 @@
         &nbsp;
       </td>
       <td align="left" valign="top"> 
-        10&nbsp;000 - 99&nbsp;999&nbsp;inh.
+        10&nbsp;000 - <br>99&nbsp;999&nbsp;inh.
       </td>
     </tr>
   </table>
   <div>
-    <img src="./bitmaps/city_4_yellow.png">
     <img src="./bitmaps/city_4_red.png">
     <img src="./bitmaps/city_4_orange.png">
+    <img src="./bitmaps/city_4_yellow.png">
     <img src="./bitmaps/city_4_white.png">
   </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -86,7 +87,7 @@
     <i>White:</i><br>&nbsp;Other location
   </div>
 
-<H4>Borders</H4>
+<H4><a href="checkbox:borders"><img src="checkbox:borders"></a>&nbsp;  Borders</H4>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
       <td align="left" valign="top" width="24"> 
@@ -106,7 +107,7 @@
     </tr>
   </table>
 
-<H4>Water Bodies</H4>
+<H4><a href="checkbox:waterbodies"><img src="checkbox:waterbodies"></a>&nbsp; Water Bodies</H4>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
       <td align="left" valign="top" width="24"> 
@@ -126,7 +127,7 @@
     </tr>
   </table>
 
-<H4>Terrain</H4>
+<H4><a href="checkbox:terrain"><img src="checkbox:terrain"></a>&nbsp; Terrain</H4>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
       <td align="left" valign="top" width="24"> 
