@@ -1,3 +1,12 @@
+2007-06-05  Torsten Rahn  <rahn@kde.org>
+
+	* src/lib/LegendBrowser.{h,cpp}: Adding new Legend Browser 
+	class that supports checkboxes.
+	
+	Works partially. I'm about to finish this now and 
+	will add settings saving for the Qt and KDE frontend 
+	right after.
+
 2007-06-05  Inge Wallin  <inge@lysator.liu.se>
 
 	Krazy: 17: Check for inappropriate pass-by-value function args
